# hcm202-g8-tts-llm

./: .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/database/: __init__.py  connection.py
backend/app/models/: chat_session.py  user.py
backend/app/services/: auth_service.py
frontend/: package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: Chatbot.jsx  Introduction.jsx
test/vite-react-chatbot/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
test/vite-react-chatbot/src/: App.jsx  main.jsx
test/vite-react-chatbot/src/components/: ChatMessage.jsx  Nav.jsx  TypingIndicator.jsx
test/vite-react-chatbot/src/pages/: Chatbot.jsx  Introduction.jsx
test/vite-react-chatbot/src/styles/: index.css
