[tool.poetry]
name = "hcm-counter-argument-backend"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = {extras=["standard"], version="^0.29"}
websockets = "^12.0"
transformers = "^4.41"
datasets = "^2.19"
peft = "^0.11"
bitsandbytes = "^0.43"
torch = {version="^2.3", source="pytorch-gpu"}
torchaudio = {version="^2.3", source="pytorch-gpu"}
openai-whisper = "^20231117"
TTS = "0.22"
pydantic = "^2.7"
python-multipart = "^0.0.9"
langdetect = "^1.0.9"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"